--- a/SistemaLiquidaciones/SistemaLiquidacionesWAR/web/WEB-INF/xhtml/articulos/listaArticulos.zul
+++ b/SistemaLiquidaciones/SistemaLiquidacionesWAR/web/WEB-INF/xhtml/articulos/listaArticulos.zul
@@ -58,9 +58,21 @@
             </listbox>
         </groupbox>
         <separator />
-<!--        <groupbox mold="3d" width="100%" height="250px">
-            <caption label="Lista ultimos tramites asociados a cliente" />
-            <listbox id="listBoxListaTramiteBodega"
+              <groupbox height="45px"
+                  mold="3d"
+                  closable="false">
+            <toolbar align="end"
+                     style="float:right; border-style:none;">
+                   <button id="btnRefreshPrecio"
+                        sclass="oT_ButtonWithIcon"
+                        image="/images/btnrefresh.gif"
+                        tooltiptext="Refrescar registros"/>
+
+            </toolbar>
+        </groupbox>
+        <groupbox mold="3d" width="100%" height="150px">
+            <caption label="Existencia" />
+            <listbox id="listBoxListaExistencia"
                      style="border-top-width: 0px; border-left-width: 0px; border-right-width: 0px; border-bottom-width: 1px;"
                      vflex="true"
                      height="100%"
@@ -70,31 +82,20 @@
                      multiple="false">
                 <listhead sizable="true">
                     <listheader
-                        id="listheaderIdOrdentrabajo"
+                        id="listheaderIdListaPrecio"
                         sclass="FDListBoxHeader1"
                         sort="auto"
                         width="20%"
-                        label="Id Ordentrabajo" />
+                        label="Bodega" />
                     <listheader
-                        id="listheaderFechaOrdentrabajo"
+                        id="listheaderDescPrecio"
                         sclass="FDListBoxHeader1"
                         sort="auto"
                         width="20%"
-                        label="Fecha ingreso Sistema" />
-                    <listheader
-                        id="listheaderEstadoTramite"
-                        sclass="FDListBoxHeader1"
-                        sort="auto"
-                        width="40%"
-                        label="Estado tramite" />
-                    <listheader
-                        id="listheaderAduanaTramite"
-                        sclass="FDListBoxHeader1"
-                        sort="auto"
-                        width="20%"
-                        label="Aduana tramite" /> 
-                </listhead>
+                        label="Existencia" />
+                    
+                    </listhead>
             </listbox>
-        </groupbox>-->
+        </groupbox>
     </window>
 </zk>
