--- a/SistemaLiquidaciones/SistemaLiquidacionesWAR/web/WEB-INF/xhtml/asignaciones/detalleAsignacion.zul
+++ b/SistemaLiquidaciones/SistemaLiquidacionesWAR/web/WEB-INF/xhtml/asignaciones/detalleAsignacion.zul
@@ -119,7 +119,27 @@
                                                              <groupbox
                                                                        mold="3d"
                                                                        closable="false" contentStyle="border:0" style="margin:0 0 0 0 ">  
-                                                            <textbox   id="txtNombreVendedor"   hflex="1" />
+                                                            <combobox id="cmbVendedor" 
+                                                                       autodrop="true"
+                                                                       mold="rounded"
+                                                                       autocomplete="true" width="175px"
+                                                                           />
+                                                             </groupbox>
+                                                        </row>
+                                                        <row>
+                                                            <hbox>
+                                                                <label value="Numero de documento" />
+                                                                <label value="*" style="color:red;font-size:10px" />
+                                                            </hbox>
+                                                             <groupbox
+                                                                       mold="3d"
+                                                                       closable="false" contentStyle="border:0" style="margin:0 0 0 0 ">  
+                                                            <intbox
+                                                                id="txtNumDoc"
+                                                                hflex="1"
+                                                                maxlength="10"
+                                                                tooltiptext="Numero unico de documento por vendedor"
+                                                                readonly="true" />
                                                              </groupbox>
                                                         </row>
                                                                     
