--- a/SistemaLiquidaciones/SistemaLiquidacionesWAR/web/WEB-INF/xhtml/asignaciones/detalleAsignacion.zul
+++ b/SistemaLiquidaciones/SistemaLiquidacionesWAR/web/WEB-INF/xhtml/asignaciones/detalleAsignacion.zul
@@ -146,6 +146,42 @@
                                                      </rows>
                                                 </grid>
                                             </groupbox>
+                                            <groupbox mold="3d" width="100%" height="300px">
+                                                <caption label="Lista de articulos a asignar" />
+                                                <groupbox height="45px"
+                                                    mold="3d"
+                                                    closable="false">
+                                                <toolbar align="end"
+                                                        style="float:right; border-style:none;">
+                                                   <button id="btnNuevoArticulo"
+                                                           sclass="oT_ButtonWithIcon"
+                                                           image="/images/btnnew.gif"
+                                                           tooltiptext="Agregar articulos"  />
+                                               </toolbar>
+                                                </groupbox>
+                                                <paging id="pagingAsignacion" />
+                                                <listbox id="listBoxAsignacion"
+                                                         style="border-top-width: 0px; border-left-width: 0px; border-right-width: 0px; border-bottom-width: 1px;"
+                                                         tooltiptext="Para ver detalle click sobre registro, para asignar registros click en boton a lado derecho"
+                                                         width="100%"
+                                                         height="100%"
+                                                         mold="paging"
+                                                         pagingPosition="top"
+                                                         multiple="false">
+                                                    <listhead sizable="true">
+                                                        <listheader id="listheaderArticulo"
+                                                                    sclass="FDListBoxHeader1"
+                                                                    sort="auto"
+                                                                    width="15%"
+                                                                    label="Articulo" />
+                                                        <listheader id="listheaderCantidad"
+                                                                    sclass="FDListBoxHeader1"
+                                                                    sort="auto"
+                                                                    width="25%"
+                                                                    label="Cantidad asignada" />
+                                                       </listhead>
+                                                </listbox>
+                                            </groupbox>
                                         </panelchildren>
                                     </panel>
                                 </div>
