Mantenimiento asignaciones lista de articulos

--- a/SistemaLiquidaciones/SistemaLiquidacionesWAR/web/WEB-INF/xhtml/asignaciones/busquedaArticulo.zul
+++ b/SistemaLiquidaciones/SistemaLiquidacionesWAR/web/WEB-INF/xhtml/asignaciones/busquedaArticulo.zul
@@ -111,7 +111,8 @@
                                                          height="100%"
                                                          mold="paging"
                                                          pagingPosition="top"
-                                                         multiple="false">
+                                                         multiple="true"
+                                                         checkmark="true" >
                                                     <listhead sizable="true">
                                                         <listheader id="listheaderArticulo"
                                                                     sclass="FDListBoxHeader1"
