--- a/SistemaLiquidaciones/SistemaLiquidacionesWAR/web/WEB-INF/xhtml/asignaciones/detalleAsignacion.zul
+++ b/SistemaLiquidaciones/SistemaLiquidacionesWAR/web/WEB-INF/xhtml/asignaciones/detalleAsignacion.zul
@@ -208,9 +208,13 @@
                                                          height="100%"
                                                          mold="paging"
                                                          pagingPosition="top"
-                                                         multiple="true"
-                                                         checkmark="true" >
+                                                         multiple="false" >
                                                     <listhead sizable="true">
+                                                        <listheader id="listheaderLote"
+                                                                    sclass="FDListBoxHeader1"
+                                                                    sort="auto"
+                                                                    width="25%"
+                                                                    label="Id Lote" />
                                                         <listheader id="listheaderArticulo"
                                                                     sclass="FDListBoxHeader1"
                                                                     sort="auto"
